double value formatter usage change in ShapeIndexAlgorithm